[package]
name = "rstype"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rstype"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
sqlite = "0.36.1"
rand = "0.9.0-alpha.2"
pancurses = "0.17.0"
open = "5.3.0"
home = "0.5.9"
csv = "1.3.0"
chrono = "0.4.38"

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
